--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
+    "npm": "^6.14.2",
     "mysql2": "^2.2.5",
     "react-router-dom": "^5.2.0",
     "sequelize": "^6.5.0"
