--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "npm": "^6.14.2",
     "mysql2": "^2.2.5",
+    "npm": "^6.14.2",
     "react-router-dom": "^5.2.0",
     "sequelize": "^6.5.0"
   }
