--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "mysql2": "^2.2.5",
     "npm": "^6.14.2",
